--- a/Recommender-System-Evaluation.ipynb
+++ b/Recommender-System-Evaluation.ipynb
@@ -828,7 +828,7 @@
     "- For the evaluation we will use the RMSE (Root Mean\n",
     "Square Error) metric from the [sklearn.metrics](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html) package.\n",
     "\n",
-    "$$𝑅𝑀𝑆𝐸\\:=\\:\\sqrt{\\frac{\\sum \\:_{i=1}^n\\left(r_i\\:-p_i\\right)^2}{n}}$$\n",
+    "$$RMSE\\:=\\:\\sqrt{\\frac{\\sum \\:\\:_{i=1}^n\\left(r_i\\:-p_i\\right)^2}{n}}$$\n",
     "\n",
     "\n",
     "### Baselines Calculation\n",
